--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,12 @@
 :root {
+    color-scheme: light dark;
+
     --container-width: 1440px;
 
-    --button-background: #62A87C;
-    --link-color: #FF6542;
-    --font-color: #272727;
-    --background-color: #FDF7FA;
+    --button-background: oklch(0.5496 0.1611 141.19);
+    --link-color: oklch(0.5527 0.1729 24.81);
+    --font-color: light-dark(oklch(0.2727 0 0), oklch(0.9598 0.0065 17.27));
+    --background-color: light-dark(oklch(0.9598 0.0065 17.27), oklch(0.2727 0 0));
     --header-background-color: var(--font-color);
 
     --border-radius: 5px;
@@ -19,12 +21,12 @@
 
 code {
     font-family: 'Courier New', Courier, monospace;
-    background-color: #f5f5f5;
+    background-color: light-dark(#f5f5f5, #333);
     color: #d63384;
     padding: 0.2em 0.4em;
     border-radius: 4px;
     font-size: 0.95em;
-  }
+}
 
 body {
     display: grid;
@@ -37,24 +39,34 @@ body {
     font-family: var(--font-family);
     font-weight: 500;
     margin: 0;
+
+    &.dark {
+        color-scheme: dark;
+    }
+
+    &.light {
+        color-scheme: light;
+    }
 }
 
 header {
     background-color: var(--header-background-color);
     color: var(--background-color);
-    display: grid;
-    grid-template-columns: 1fr auto;
-    grid-template-rows: 1fr;
 
     .flexBox {
         display: flex;
-        justify-content: space-between;
         align-items: center;
+        gap: 1rem;
+
+        h1 {
+            margin-right: auto;
+        }
 
         h1 a,
         h2 a {
             color: var(--background-color);
             text-decoration: none;
+            transition: color 0.3s ease-out;
         }
 
         a:hover {
@@ -97,6 +109,18 @@ a:not([role="button"]) {
     }
 }
 
+.index {
+    .container {
+        margin-bottom: 1rem;
+    }
+
+    .box {
+        border-radius: var(--border-radius);
+        padding: 1rem 2rem;
+        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    }
+}
+
 .cardGrid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
@@ -115,6 +139,11 @@ a:not([role="button"]) {
         img {
             width: 100%;
             border-radius: 10px;
+            transition: transform 0.3s ease;
+
+            &:hover {
+                transform: scale(1.05);
+            }
         }
 
         h4 {
