--- a/css/font.css
+++ b/css/font.css
@@ -1,7 +1,7 @@
 /* Light Weight */
 @font-face {
     font-family: "Quicksand";
-    src: local("Quicksand"), url("/Weekly-nerd/font/Quicksand-light.ttf") format("truetype");
+    src: local("Quicksand"), url("/font/Quicksand-light.ttf") format("truetype");
     font-weight: 500; /* Medium weight */
     font-style: normal;
 }
@@ -9,7 +9,7 @@
 /* Regular Weight */
 @font-face {
     font-family: "Quicksand";
-    src: local("Quicksand"), url("/Weekly-nerd/font/Quicksand-Regular.ttf") format("truetype");
+    src: local("Quicksand"), url("/font/Quicksand-Regular.ttf") format("truetype");
     font-weight: normal;
     font-style: normal;
 }
@@ -17,7 +17,7 @@
 /* Medium Weight */
 @font-face {
     font-family: "Quicksand";
-    src: local("Quicksand"), url("/Weekly-nerd/font/Quicksand-Medium.ttf") format("truetype");
+    src: local("Quicksand"), url("/font/Quicksand-Medium.ttf") format("truetype");
     font-weight: 500; /* Medium weight */
     font-style: normal;
 }
@@ -25,7 +25,7 @@
 /* Semibold Weight */
 @font-face {
     font-family: "Quicksand";
-    src: local("Quicksand"), url("/Weekly-nerd/font/Quicksand-SemiBold.ttf") format("truetype");
+    src: local("Quicksand"), url("/font/Quicksand-SemiBold.ttf") format("truetype");
     font-weight: normal;
     font-style: normal;
 }
@@ -33,7 +33,7 @@
 /* Bold Weight */
 @font-face {
     font-family: "Quicksand";
-    src: local("Quicksand"), url("/Weekly-nerd/font/Quicksand-Bold.ttf") format("truetype");
+    src: local("Quicksand"), url("/font/Quicksand-Bold.ttf") format("truetype");
     font-weight: bold;
     font-style: normal;
 }
