--- a/css/styles.css
+++ b/css/styles.css
@@ -121,6 +121,14 @@ a:not([role="button"]) {
     }
 }
 
+details {
+    summary {
+        h2 {
+            display: inline-block;
+        }
+    }
+}
+
 .cardGrid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
@@ -134,7 +142,12 @@ a:not([role="button"]) {
 
         padding: 0.5rem 1rem;
         box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-        border-radius: 10px;
+        border-radius: calc(var(--border-radius) * 2);
+
+        a {
+            overflow: hidden;
+            border-radius: calc(var(--border-radius) * 2);
+        }
 
         img {
             width: 100%;
