--- a/css/styles.css
+++ b/css/styles.css
@@ -123,6 +123,13 @@ a:not([role="button"]) {
 
 details {
     summary {
+        cursor: pointer;
+        transition: all 0.3s ease-out;
+
+        &:hover {
+            color: var(--link-color);
+        }
+
         h2 {
             display: inline-block;
         }
@@ -139,28 +146,35 @@ details {
         display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: 1fr auto auto;
-
+        outline: 1px solid transparent;
         padding: 0.5rem 1rem;
         box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
         border-radius: calc(var(--border-radius) * 2);
+        color: var(--font-color);
+        text-decoration: none;
+        transition: transform 0.3s ease;
 
-        a {
-            overflow: hidden;
-            border-radius: calc(var(--border-radius) * 2);
+        &:hover, &:target, &:focus {
+            outline-color: var(--link-color);
+
+            img {
+                transform: scale(1.05);
+            }
+
+            h4 {
+                color: var(--link-color);
+            }
         }
 
         img {
             width: 100%;
             border-radius: 10px;
             transition: transform 0.3s ease;
-
-            &:hover {
-                transform: scale(1.05);
-            }
         }
 
         h4 {
             margin: 0;
+            transition: all 0.3s ease;
         }
     }
 }
@@ -169,36 +183,44 @@ details {
     display: grid;
     grid-template-columns: 1fr;
     gap: 1rem;
+    transition: height 0.3s ease-out;
 
     @media screen and (min-width: 768px) {
         grid-template-columns: 1fr 2fr;
     }
 
-    .detailHeader {
+    .breadcrumbs {
         grid-column: 1;
         grid-row: 1;
+        min-height: 20px;
+
+        @media screen and (min-width: 768px) {
+            grid-column: 1 / span 2;
+        }
+    }
+
+    .detailHeader {
+        grid-column: 1;
+        grid-row: 3;
 
         @media screen and (min-width: 768px) {
             grid-column: 2;
-            grid-row: 1;
+            grid-row: 2;
         }
     }
 
     .detailsImage {
         grid-row: 2;
         grid-column: 1;
-
-        @media screen and (min-width: 768px) {
-            grid-row: 1;
-        }
     }
 
     .detailsInfo {
         grid-column: 1;
-        grid-row: 3;
+        grid-row: 4;
 
         @media screen and (min-width: 768px) {
             grid-column: 1 / span 2;
+            grid-row: 3;
         }
     }
 
@@ -206,8 +228,26 @@ details {
         img {
             width: 100%;
             border-radius: 10px;
+            min-height: 100px;
         }
     }
+
+    .nextPrevious {
+        grid-column: 1;
+        grid-row: 5;
+        min-height: 20px;
+
+        @media screen and (min-width: 768px) {
+            grid-column: 1 / span 2;
+            grid-row: 4;
+        }
+    }
+}
+
+.nextPrevious {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 footer {
